2013-01-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/hidden3d.c:  Up until now hidden3d handled any pm3d surfaces as
	a collection of points, which did essentially nothing at all.  Now we
	treat them as invisible lines (LT_NODRAW) so that they can occluded
	other objects.
	This trick was already used in hidden2.dem but now it's built in.

2013-01-18  Ethan A Merritt  <merritt@u.washington.edu>

	* term/x11.trm:  Right- or Center- justified enhanced text was losing
	track of the font size.  This bug was evident in "key.dem".

2013-01-08  Ethan A Merritt  <merritt@u.washington.edu>

	* term/pslatex.trm (EPSLATEX_layer):  Reset current text color at the
	start of each layer's block of TeX output.  Bug #3599916

	* src/term.c (term_apply_lp_properties):  Always apply linetype color,
	even if the flag use_palette in not set.  Many terminals cope with this
	on their own, but not all of them (e.g. cairolatex).
	Bug #3599916

	* src/hidden3d.c (in_front):  Inline the single line subroutine
	handle_edge_fragment() at its sole call site.

2013-01-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/mouse.c term/x11.trm: Fix aspect ratio error introduced 2013-01-05

2013-01-06  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot.c (main): Unbuffered stdin is needed for readline even if
	X11 is not configured, as suggested in the comment from 2004.

	* src/command.c (invalid_command): When an invalid command is detected,
	advance the input parsing pointer (c_token) to the end of the command.
	Otherwise we're left in the middle of an invalid command after the
	error message is printed.

2013-01-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/mouse.c (do_event):  Testing for multiplot when a signal is
	received from gnuplot_x11 is pointless because gnuplot no longer has any
	idea whether the plot window sending the event contains a multiplot.
	Clean up the X11-dependent code that responds to GE_fontprops events.
