@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: set.c,v 1.384 2012/12/14 18:11:09 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: set.c,v 1.385 2013/01/04 22:03:54 broeker Exp $"); }
 #endif
 
 /* GNUPLOT - set.c */
@@ -4522,6 +4522,7 @@ static void
 set_timefmt()
 {
     int axis;
+    char *newformat = NULL;
 
     c_token++;
     if (END_OF_COMMAND) {
@@ -4531,20 +4532,18 @@ set_timefmt()
     } else {
 	if ((axis = lookup_table(axisname_tbl, c_token)) >= 0) {
 	    c_token++;
-	    if (isstring(c_token)) {
-		quote_str(axis_array[axis].timefmt,c_token, MAX_ID_LEN);
-		c_token++;
-	    } else {
-		int_error(c_token, "time format string expected");
-	    }
-	} else if (isstring(c_token)) {
-	    /* set the given parse string for all current timedata axes: */
-	    for (axis = 0; axis < AXIS_ARRAY_SIZE; axis++)
-		quote_str(axis_array[axis].timefmt, c_token, MAX_ID_LEN);
-	    c_token++;
+	    newformat = try_to_get_string();
+	    if (newformat)
+		strncpy(&(axis_array[axis].timefmt[0]), newformat, MAX_ID_LEN);
 	} else {
-	    int_error(c_token, "time format string expected");
+	    newformat = try_to_get_string();
+	    if (newformat)
+		for (axis = 0; axis < AXIS_ARRAY_SIZE; axis++)
+		    strncpy(&(axis_array[axis].timefmt[0]), newformat, MAX_ID_LEN);
 	}
+	if (!newformat)
+	    int_error(c_token, "time format string expected");
+	free(newformat);
     }
 }
 
